# simple-errors

./: README.md  makefile  meson.build
include/: error.h  lib.h  meson.build
source/: lib.c  meson.build
tests/: eprinterr.c  meson.build  say_hello.c
